--- a/setup.cfg
+++ b/setup.cfg
@@ -25,4 +25,11 @@ max_line_length = 88
 ignore =
     E203,  # Space before : (needed for black formatting of slices)
     W503,  # Line break before binary operator (needed for black)
-    F821   # TODO: fix F821 issues (see GH #1120) and remove this line
+
+[isort]
+multi_line_output = 3
+include_trailing_comma = True
+force_grid_wrap = 0
+combine_as_imports = True
+line_length = 88
+force_sort_within_sections = True
