--- a/setup.cfg
+++ b/setup.cfg
@@ -33,3 +33,42 @@ force_grid_wrap = 0
 combine_as_imports = True
 line_length = 88
 force_sort_within_sections = True
+
+[mypy]
+no_implicit_optional=True
+
+[mypy-geopandas.*.tests.*,geopandas._version.*]
+ignore_errors=True
+
+[mypy-numpy.*]
+ignore_missing_imports = True
+
+[mypy-pandas.*]
+ignore_missing_imports = True
+
+[mypy-shapely.*]
+ignore_missing_imports = True
+
+[mypy-matplotlib.*]
+ignore_missing_imports = True
+
+[mypy-mapclassify.*]
+ignore_missing_imports = True
+
+[mypy-pysal.*]
+ignore_missing_imports = True
+
+[mypy-fiona.*]
+ignore_missing_imports = True
+
+[mypy-descartes.*]
+ignore_missing_imports = True
+
+[mypy-pyproj.*]
+ignore_missing_imports = True
+
+[mypy-geopy.*]
+ignore_missing_imports = True
+
+[mypy-rtree.*]
+ignore_missing_imports = True
