--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,8 @@ line_length = 88
 force_sort_within_sections = True
 
 [mypy]
-no_implicit_optional=True
+check_untyped_defs = True
+no_implicit_optional = True
 
 [mypy-geopandas.*.tests.*,geopandas._version.*]
 ignore_errors=True
