--- a/setup.cfg
+++ b/setup.cfg
@@ -35,8 +35,15 @@ line_length = 88
 force_sort_within_sections = True
 
 [mypy]
+platform = linux-64
+python_version = 3.6
 check_untyped_defs = True
 no_implicit_optional = True
+disallow_untyped_decorators = True
+warn_unused_ignores = True
+warn_redundant_casts = True
+strict_equality = True
+show_column_numbers = True
 
 [mypy-geopandas.*.tests.*,geopandas._version.*]
 ignore_errors=True
